--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,90 @@
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f0f2f5;
+    }
+  
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+      background-color: #1a73e8;
+      color: white;
+      border-radius: 10px;
+      margin-bottom: 30px;
+    }
+  
+    .hero h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+  
+    .subtitle {
+      font-size: 1.2em;
+      opacity: 0.9;
+    }
+  
+    .content {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+  
+    .skills {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+  
+    .skill-card {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      width: 200px;
+      text-align: center;
+    }
+  
+    h2 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 30px;
+    }
+  </style>
 </head>
 
 <body>
+  <main>
+    <section class="hero">
+      <h1>Louis is Powerful</h1>
+      <p class="subtitle">Bienvenue sur mon premier projet avec Git et HTML5 !</p>
+    </section>
 
-  <!-- Add your site or application content here -->
-  <p>Hamid is powerfull</p>
+    <section class="content">
+      <h2>Mes compétences en développement</h2>
+      <div class="skills">
+        <div class="skill-card">
+          <h3>HTML5</h3>
+          <p>Structure et contenu</p>
+        </div>
+        <div class="skill-card">
+          <h3>Git</h3>
+          <p>Gestion de versions</p>
+        </div>
+        <div class="skill-card">
+          <h3>GitHub</h3>
+          <p>Collaboration et partage</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
   <script src="js/app.js"></script>
-
 </body>
 
 </html>
